@@ -1,3 +1,15 @@
+2012-09-26  Mark Hahnenberg  <mhahnenberg@apple.com>
+
+        Clean up HasTrivialConstructor/Destructor
+        https://bugs.webkit.org/show_bug.cgi?id=97754
+
+        Reviewed by Darin Adler.
+
+        Cleaned up HasTrivialConstructor and HasTrivialDestructor by defining them in terms of 
+        other type traits we have. Also moved some ifdefs and comments to make things more clear.
+
+        * wtf/TypeTraits.h:
+
 2012-09-27  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Web Inspector: NMI: move visited and countObjectSize methods implementation into separate class.
